--- a/client/src/components/TodoList/index.css
+++ b/client/src/components/TodoList/index.css
@@ -1,4 +1,21 @@
+.todo-list-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
 .todo-list {
     list-style: none;
     padding-left: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
+
+.loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50%;
+  }
+  
